--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
   <nav>
     <a onclick="showTab('quem-somos')">Quem somos</a>
     <a onclick="showTab('materiais')">Materiais</a>
-    <a onclick="showTab('profissionalize')">Aprenda Fora da Escola</a>
-    <a onclick="showTab('profissionais')">Profissionais</a>
+    <a onclick="showTab('profissionalize')">Profissionalize</a>
+    <a onclick="showTab('profissionais')">Apoiadores</a>
     <a onclick="showTab('comunidade')">Comunidade</a>
     <a onclick="showTab('contato')">Contato</a>
   </nav>
@@ -702,3 +702,4 @@ Hoje, depois daquele trabalho que parecia comum, damos um passo a mais: transfor
   </script>
 </body>
 </html>
+
